charon/tests/ui/simple/box-dyn-fnonce.out

thread 'rustc' panicked at src/bin/charon-driver/translate/translate_bodies.rs:772:37:
assertion failed: field_id == FieldId::ZERO
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting body.
 --> /rustc/library/alloc/src/boxed.rs:2249:5

note: the error occurred when translating `alloc::boxed::{impl core::ops::function::FnOnce<Args> for alloc::boxed::Box<F, A>[@TraitClause1, @TraitClause2]}::call_once`, which is (transitively) used at the following location(s):
 --> tests/ui/simple/box-dyn-fnonce.rs:4:5
  |
4 |     f();
  |     ---

thread 'rustc' panicked at src/bin/charon-driver/translate/translate_bodies.rs:772:37:
assertion failed: field_id == FieldId::ZERO
error: Thread panicked when extracting body.
 --> /rustc/library/alloc/src/boxed.rs:1923:5

note: the error occurred when translating `alloc::boxed::{impl core::ops::drop::Drop for alloc::boxed::Box<T, A>[@TraitClause0, @TraitClause1]}::drop`, which is (transitively) used at the following location(s):
 --> tests/ui/simple/box-dyn-fnonce.rs:4:5
  |
4 |     f();
  |     ---
ERROR Charon failed to translate this code (2 errors)
